Change sidebar width to fix spacing

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -33,6 +33,8 @@
 
     padding: 5px;
     margin: 2px;
+    width: -moz-available;
+    width: -webkit-fill-available;
 }
     .sidebar .sidebar_link .title{
         text-align: center;
